feat: param changedAfter
